objects/SCP_Certa_GC__Account_Review__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts Reviews</relationshipLabel>
        <relationshipName>Accounts_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Customer_Contacts_Description__c</fullName>
        <label>Customer Contacts Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Customer_Contacts__c</fullName>
        <inlineHelpText>Are there enough relevant customer contacts with the correct level of authority and influence that are Key Decision Makers included in the Relationship Development Mosaic? Is there the correct level of peer to peer relationships?</inlineHelpText>
        <label>Customer Contacts (0~25)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Engagement_Plan_Description__c</fullName>
        <label>Engagement Plan Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Engagement_Plan__c</fullName>
        <label>Engagement Plan (0~25)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Growth_Strategy_Description__c</fullName>
        <label>Growth Strategy Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Growth_Strategy__c</fullName>
        <label>Growth Strategy (0~25)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Sales_Revenues_Description__c</fullName>
        <label>Sales/Revenues Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Seles_Revenues__c</fullName>
        <label>Seles/Revenues (0~25)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Total_Score__c</fullName>
        <formula>SCP_Certa_GC__Customer_Contacts__c + SCP_Certa_GC__Engagement_Plan__c + SCP_Certa_GC__Growth_Strategy__c + SCP_Certa_GC__Seles_Revenues__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Account Review</label>
    <nameField>
        <label>Nombre de Account Review</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SCP_Certa_GC__Customer_Contacts_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>SCP_Certa_GC__Customer_Contacts__c &gt; 25 || SCP_Certa_GC__Customer_Contacts__c &lt; 0</errorConditionFormula>
        <errorDisplayField>SCP_Certa_GC__Customer_Contacts__c</errorDisplayField>
        <errorMessage>El valor debe ser mayor que 0 y menor que 25</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCP_Certa_GC__Engagement_Plan_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>SCP_Certa_GC__Engagement_Plan__c &gt; 25 || SCP_Certa_GC__Engagement_Plan__c &lt; 0</errorConditionFormula>
        <errorDisplayField>SCP_Certa_GC__Engagement_Plan__c</errorDisplayField>
        <errorMessage>El valor debe ser mayor que 0 y menor que 25</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCP_Certa_GC__Growth_Strategy_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>SCP_Certa_GC__Growth_Strategy__c &gt; 25 || SCP_Certa_GC__Growth_Strategy__c &lt; 0</errorConditionFormula>
        <errorDisplayField>SCP_Certa_GC__Growth_Strategy__c</errorDisplayField>
        <errorMessage>El valor debe ser mayor que 0 y menor que 25</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCP_Certa_GC__Sales_Revenue_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>SCP_Certa_GC__Seles_Revenues__c &gt; 25 || SCP_Certa_GC__Seles_Revenues__c &lt; 0</errorConditionFormula>
        <errorDisplayField>SCP_Certa_GC__Seles_Revenues__c</errorDisplayField>
        <errorMessage>El valor debe ser mayor que 0 y menor que 25</errorMessage>
    </validationRules>
</CustomObject>